cc: Don't use BGRA_EXT with glCopyTexImage2d

Merge to 71.

When GLRenderer reads back from the framebuffer with glCopyTexImage2d,
it tries to be smart about what internal format to use for the new texture.

Unfortunately on CrOS it ends up using GL_BGRA_EXT, that seems to hit
a particularly slow path in gles2_cmd_decoder.

This CL changes it to RGB/RGBA, decreasing the CPU cost of CopyTexImage2d
of two orders of magnitude when applying fullscreen backdrop effects.

Bug: 900046

TBR=dcastagna@chromium.org

(cherry picked from commit c8e0130b157c594c4b0cd4fdd7aa5503b0ca2069 [formerly bf7c3813f7d59a971b590ddb2e94d4a6afc84e11])

Change-Id: I19bd8a9d008109e336f0fd346df130c2d7878154
Reviewed-on: https://chromium-review.googlesource.com/c/1306653
Reviewed-by: Kristian H. Kristensen <hoegsberg@chromium.org>
Commit-Queue: Daniele Castagna <dcastagna@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#604062}
Reviewed-on: https://chromium-review.googlesource.com/c/1316115
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#479}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 18eafc251421488e434121a965af6b8a160e2491